--- a/index.html
+++ b/index.html
@@ -1,38 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <nav class="position-fixed">
-        <div class="container d-flex justify-content-between align-items-center py-2">
+    <div id="line"></div>
+    <nav class="position-fixed w-100">
+        <div class="container position-relative d-flex justify-content-between align-items-center py-2">
             <div class="logo">
                 <p>GEARTECH</p>
             </div>
-            <div class="d-flex">
-                <p>Contact Us</p>
-                <div class="menu">|||</div>
+            <div class="d-flex gap-3">
+                <button class="contact">Contact Us</button>
+                <button class="menu" onclick="openMenu()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="black" class="bi bi-list"
+                        viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+                    </svg>
+                </button>
+            </div>
+            <button class="position-absolute startaproject"><span class="textOrange">Start</span> a Project</button>
+        </div>
+
+
+        <div class="nav-links">
+            <div class="container">
+                <div class="menu-left">
+                    <p class="menu-left-word">Menu</p>
+                    <ul>
+                        <li><a href="#">porjects</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Offers</a></li>
+                    </ul>
+                </div>
+                <div class="menu-right">
+                    <p>hello@baunfire.com</p>
+                    <p>(408) 899-8998</p>
+                    <p>syria , Damascus</p>
+                    <p>syria , Damascus</p>
+                    <ul class="social-media">
+                        <li><a href="">F</a></li>
+                        <li><a href="">F</a></li>
+                        <li><a href="">F</a></li>
+                        <li><a href="">F</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
-    <header class="position-relative">
+
+
+
+    <header class="position-relative overflow-hidden">
         <div class="container">
-            <div class="box py-5 mt-5 col-9">
-                <p class="textOrange sectionLittleP mb-3">WE ARE GEARTECH</p>
-                <h1 class="sectionTitle mb-4 ps-4 ">A startup prgramming company</h1>
-                <p class="textGray sectionP mb-3 ps-4">Made up of a creative team of devolpres, designers and strategists . Our dedicated and experienced professionals specializes in providing high level softwares and applications.</p>
+            <div class="box py-3 mt-5 col-12 col-lg-9">
+                <p class="textOrange sectionLittleP mb-5">WE ARE GEARTECH</p>
+                <h1 class="sectionTitle mb-5 ps-lg-4 ">A startup prgramming company</h1>
+                <p class="textGray sectionP mb-4 ps-lg-4">Our dedicated and experienced professionals specializes in
+                    providing high level softwares and applications.</p>
                 <button class="ms-4">LET'S TALK NOW</button>
             </div>
-            <img  src="/imgs/G.png" class="position-absolute top-0 G" alt="">
-            <img  src="/imgs/E.png" class="position-absolute E" alt="">
-            <img src="/imgs/Starts1.png" class="position-absolute " alt="">
+            <img src="/imgs/G.png" class="position-absolute rellax top-0 G" data-rellax-speed="-3" alt="GearTech">
+            <img src="/imgs/E.png" class="position-absolute rellax E" data-rellax-speed="-2" alt="GearTech">
+            <img src="/imgs/Stars1.png" class="position-absolute stars " alt="GearTech">
+            <div class="arrow position-absolute  d-flex align-items-center">
+                <p>SCROLL FOR MORE</p>
+                <img src="/imgs/arrow1.png" alt="arrow img">
+            </div>
         </div>
     </header>
+    <section class="one ">
+        <!-- postion relative for each section to postion the imgs -->
+        <div class="container">
+            <div class="box position-relative">
+                <div class="text-left">
+                    <p class="fade-out">we put a lot of emphasis on getting your web app to market as quickly as possible while still respecting your time.</p>
+                </div>
+                <div class="text-right position-relative">
+                    <p class="fade-out" >Quicken The pace of web app development Timing is crucial in technology, but that is something you already know.</p>
+                    <div class="circle position-absolute rellax" data-rellax-speed="1"></div>
+                </div>
+                <img src="/imgs/Stars2.png" class="position-absolute stars2 rellax" data-rellax-speed="1"  alt="">
+                <img src="/imgs/Stars3.png" class="position-absolute stars3 rellax" data-rellax-speed="1"  alt="">
+            </div>
+        </div>
+        <div class="oragne-box bg-orange text-white position-relative">
+            <div class="container">
+                <p class="w-100">Our Goal it is over our goal to create durable digital products, we're able to prevent surprises and consistently produce the best quality software beacuse we're pragmatic product specialists with a focused area of experti</p>
+            </div>
+        </div>
+        
+    </section>
+
+
+
+
+
+
+
 
     <!-- <div class="circle"></div>
     <section class="black">
@@ -49,6 +125,15 @@
     </section>
     <section class="black">
         <h1>hello</h1>
+    </section>
+    <section class="white">
+        <h1>hello</h1>
+    </section>
+    <section class="white">
+        <h1>hello</h1>
+    </section>
+    <section class="black">
+        <h1>hello</h1>
     </section> -->
 
 
@@ -58,6 +143,17 @@
 
 
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-<!-- <script src="script.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
+
+<script src="script.js"></script>
+<!-- <script src="test.js"></script> -->
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+<script src="MagicScroll.js"></script>
+<!-- this is indector helps you to see the point -->
+
 </html>
